# Itasha.Corp_S4F3-3TCH

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
authoring/: __init__.py  composite.py  generator.py  layout.py  test_harness.py  types.py
control/: __init__.py  batch.py  model_manager.py  performance.py  quantization.py  server_lifecycle.py  templates.py
publishing/: __init__.py  registry.py  scaffolder.py  security.py  versioning.py
quality/: __init__.py  presets.py  prompt_enhancer.py  upscaler.py  workflow_builder.py
schema/: __init__.py  cli.py  converters.py  types.py  validator.py  validators_common.py  validators_v0.py  validators_v1.py
tests/: test_basic.py
workflows/: 4x-upscale.json  batch-comparison.json  brand-badge-generator.json  brand-character-base.json  character-consistency.json  controlnet-pose.json  flux-controlnet-union.json  flux-pulid.json  flux-txt2img.json  flux2-multi-reference.json  flux2-txt2img.json  ip-adapter-style.json  manga-page-batch.json  manga-panel-single.json  marketing-hero.json  sdxl-optimized-txt2img.json  sticker-batch.json
